syntax = "proto3";

package signer;
option go_package = "./signer;signer";

message PerKeyResult {
  string key_id = 1;

  bool   ok     = 2;
  string error  = 3; // empty if ok=true
}

// ---- unlock ----
message UnlockRequest {
  repeated string key_ids    = 1;
  bytes           passphrase = 2;
}
message UnlockResponse {
  repeated PerKeyResult results = 1;
}

// ---- lock ----
message LockRequest {
  repeated string key_ids = 1;
}
message LockResponse   {
  repeated PerKeyResult results = 1;
}

// ---- status ----
enum LockState {
  LOCK_STATE_UNSPECIFIED = 0;
  LOCKED                 = 1;
  UNLOCKED               = 2;
}

message KeyStatus {
  string key_id = 1;

  LockState lock_state   = 2;  // true if key is unlocked in memory
  string    tz4          = 3;  // tz4 address (always available)
  string    bl_pubkey    = 4;  // BLpk… (always available)
  string    pop          = 5;  // BLsig… PoP over pubkey (always available)

  uint64 last_block_level           = 10;
  uint64 last_preattestation_level  = 11;
  uint64 last_attestation_level     = 12;

  uint32 last_block_round           = 20;
  uint32 last_preattestation_round  = 21;
  uint32 last_attestation_round     = 22;

  bool state_corrupted              = 30; // true if level.bin failed to decrypt/load
}

message StatusRequest {}
message StatusResponse {
  repeated KeyStatus keys = 1;
}


// ---- sign ----
// Gadget decodes raw bytes to determine both.
message SignRequest {
  string tz4     = 1;
  bytes  message = 2; // raw, encoded Tezos content to sign
}
message SignResponse {
  bytes signature = 1; // compressed BLsig (96B)
}

// ---- new keys ----
message NewKeyPerKeyResult {
  string key_id    = 1; // final id (auto or requested)
  string bl_pubkey = 2; // Base58 BLPubkey
  string tz4       = 3; // tz4 hash of pubkey
  
  bool   ok        = 4;
  string error     = 5; // empty if ok=true
}

message NewKeysRequest {
  // Optional: provide one or more aliases
  // If empty, gadget auto-assigns (e.g., "key3").
  repeated string key_ids    = 1;
  bytes           passphrase = 2;
}
message NewKeysResponse {
  // One result per attempted key (includes ok/error + key material)
  repeated NewKeyPerKeyResult results = 1;
}

// ---- logs ----
message LogsRequest {
  // Max number of most-recent log lines to return.
  // If zero, gadget picks a sensible default (e.g., 100).
  uint32 limit = 1;
}
message LogsResponse {
  repeated string lines = 1; // newest last
}

// ---- init master ----
message InitMasterRequest {
  bool  deterministic = 1; // true => HD mode; false => random-only mode
  bytes passphrase    = 2; // used to derive KEK and encrypt seed.bin
}

// ---- init master info ----
message InitInfoRequest {}
message InitInfoResponse {
  bool master_present        = 1; // master.json exists
  bool deterministic_enabled = 2; // first byte of seed.bin == 0x01 (only meaningful if seed_present==true)
}

// ---- set level ----
// When executed, round is reset to zero on disk.
message SetLevelRequest {
  string   key_id = 1;
  uint64   level   = 3;
}

// ---- delete keys ----
message DeleteKeysRequest {
  repeated string key_ids    = 1;
  bytes           passphrase = 2;
}
message DeleteKeysResponse {
  repeated PerKeyResult results = 1;
}


message Ok {
  bool ok = 1;
}

message Error {
  uint32 code    = 1;
  string message = 2;
}

message Request {
  oneof payload {
    UnlockRequest     unlock      = 1;
    LockRequest       lock        = 2;
    StatusRequest     status      = 3;
    SignRequest       sign        = 4;
    NewKeysRequest    new_keys    = 5;
    LogsRequest       logs        = 6;
    InitMasterRequest init_master = 7;
    InitInfoRequest   init_info   = 8;
    SetLevelRequest   set_level   = 9;
    DeleteKeysRequest delete_keys = 10;
  }
}

message Response {
  oneof payload {
    UnlockResponse     unlock      = 1;
    LockResponse       lock        = 2;
    StatusResponse     status      = 3;
    SignResponse       sign        = 4;
    NewKeysResponse    new_key     = 5;
    LogsResponse       logs        = 6;
    InitInfoResponse   init_info   = 7;
    DeleteKeysResponse delete_keys = 8;

    Ok                 ok          = 15; // for init_master & set_level
    Error              error       = 16;
  }
}
